--- a/package.json
+++ b/package.json
@@ -1,45 +1,106 @@
 {
-  "name": "msvgc",
-  "version": "0.1.1",
-  "description": "Small util for making reusable react / react-native component from plain svg files",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "_args": [
+    [
+      {
+        "raw": "msvgc",
+        "scope": null,
+        "escapedName": "msvgc",
+        "name": "msvgc",
+        "rawSpec": "",
+        "spec": "latest",
+        "type": "tag"
+      },
+      "/Users/wind/Desktop/version/akita/app/img"
+    ]
+  ],
+  "_cnpm_publish_time": 1478860596574,
+  "_from": "msvgc",
+  "_hasShrinkwrap": false,
+  "_id": "msvgc@0.1.1",
+  "_location": "/msvgc",
+  "_nodeVersion": "7.0.0",
+  "_npmOperationalInternal": {
+    "host": "packages-12-west.internal.npmjs.com",
+    "tmp": "tmp/msvgc-0.1.1.tgz_1478860594794_0.2023933024611324"
+  },
+  "_npmUser": {
+    "name": "necinc",
+    "email": "mvyznyuk@gmail.com"
+  },
+  "_npmVersion": "3.10.8",
+  "_phantomChildren": {},
+  "_requested": {
+    "raw": "msvgc",
+    "scope": null,
+    "escapedName": "msvgc",
+    "name": "msvgc",
+    "rawSpec": "",
+    "spec": "latest",
+    "type": "tag"
+  },
+  "_requiredBy": [
+    "#USER"
+  ],
+  "_resolved": "http://registry.npm.taobao.org/msvgc/download/msvgc-0.1.1.tgz",
+  "_shasum": "9e94c21043333516c0febc54343cc69718918d75",
+  "_shrinkwrap": null,
+  "_spec": "msvgc",
+  "_where": "/Users/wind/Desktop/version/akita/app/img",
+  "author": {
+    "name": "necinc"
   },
   "bin": {
     "msvgc": "./bin/cli"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/necinc/msvgc.git"
+  "bugs": {
+    "url": "https://github.com/necinc/msvgc/issues"
   },
+  "dependencies": {
+    "colors": "^1.1.2",
+    "svgo": "^0.7.1",
+    "xmldom": "^0.1.22"
+  },
+  "description": "Small util for making reusable react / react-native component from plain svg files",
+  "devDependencies": {
+    "eslint": "^3.9.1",
+    "eslint-config-standard": "^6.2.1",
+    "eslint-plugin-promise": "^3.3.1",
+    "eslint-plugin-standard": "^2.0.1"
+  },
+  "directories": {},
+  "dist": {
+    "shasum": "9e94c21043333516c0febc54343cc69718918d75",
+    "size": 4658,
+    "noattachment": false,
+    "tarball": "http://registry.npm.taobao.org/msvgc/download/msvgc-0.1.1.tgz"
+  },
+  "gitHead": "afa666dd2c7801d0de58a1a7d525117d1cfd10dd",
+  "homepage": "https://github.com/necinc/msvgc#readme",
   "keywords": [
     "react",
     "svg",
     "node",
     "command-line"
   ],
-  "author": "necinc",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/necinc/msvgc/issues"
+  "main": "index.js",
+  "maintainers": [
+    {
+      "name": "necinc",
+      "email": "mvyznyuk@gmail.com"
+    }
+  ],
+  "name": "msvgc",
+  "optionalDependencies": {},
+  "publish_time": 1478860596574,
+  "readme": "# MSVGC\n\nUtils for generating react components from plain svg files <br />\n*(compatible with react-native)*\n\n### Install:\n```bash\n# install package globally\nnpm install -g msvgc\n```\n### Usage:\n```bash\n# provide for utils\nmsvgc -f ./path/to/pic.svg -o ./svgComponents/\n```\n\n`--react-native` flag create components using [react-native-svg](https://github.com/react-native-community/react-native-svg) library\n\n`--typescript` flag will using react importing like in typescript (`import * as React`)\n\n<br />\nThen use generated components in your jsx/tsx files:\n```js\n[...]\n\nimport Pic from './svgComponents/Pic'\n\nclass MyComponent extends Component {\n  render() {\n    return (\n      <div>\n        <Pic width={300} height={100} />\n        <p>Lorem ipsum...</p>\n      </div>\n    );\n  }\n}\n\n[...]\n```\n\n#### TODO:\n- [ ] do creating index file in components directory for exporting created files\n- [ ] do comparating with existing files in target component directory\n",
+  "readmeFilename": "README.md",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/necinc/msvgc.git"
   },
-  "homepage": "https://github.com/necinc/msvgc#readme",
-  "dependencies": {
-    "camelcase": "^4.1.0",
-    "colors": "^1.1.2",
-    "css": "^2.2.1",
-    "fs-extra": "^3.0.1",
-    "indent-string": "^3.1.0",
-    "pretty-data": "^0.40.0",
-    "prop-types": "^15.5.10",
-    "svgo": "^0.7.1",
-    "xmldom": "^0.1.22"
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "devDependencies": {
-    "eslint": "^3.9.1",
-    "eslint-config-standard": "^6.2.1",
-    "eslint-plugin-promise": "^3.3.1",
-    "eslint-plugin-standard": "^2.0.1"
-  }
+  "version": "0.1.1"
 }
